# havesmashed

./: .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
admin/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  index.css  types.ts
admin/src/components/: Layout.tsx
admin/src/pages/: BadgesPage.tsx  CitiesPage.tsx  DashboardPage.tsx  ForumPage.tsx  LoginPage.tsx  NotificationsPage.tsx  UsersPage.tsx
admin/src/services/: api.ts
admin/src/stores/: adminStore.ts
backend/: .env.dev  Cargo.toml  Dockerfile  seed.sh  seed.sql  seed_data.json
backend/migrations/: 001_initial_schema.sql  003_seed_tags.sql  010_notification_type.sql  011_height_and_age_update.sql  012_new_badges.sql  014_notification_unread_index.sql  015_forum.sql  018_badge_tiers.sql  019_partners.sql
backend/src/: config.rs  main.rs
backend/src/handlers/: admin.rs  auth.rs  badges.rs  cities.rs  connections.rs  dates.rs  feed.rs  forum.rs  friends.rs  mod.rs  notifications.rs  partners.rs  stats.rs
backend/src/middleware/: auth.rs
backend/src/models/: date.rs  mod.rs  tag.rs  user.rs
backend/src/services/: crypto.rs  invite.rs  mod.rs  wordlist.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BadgePopup.tsx  SmashOverlay.tsx
frontend/src/data/: tags.ts
frontend/src/pages/: DashboardPage.tsx  ForumPage.tsx  (+9 more)
mobile/: App.tsx  app.config.ts  package-lock.json  package.json
nginx/: prod.conf
(+87 files in other folders)
