[package]
name = "havesmashed-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
http = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Cryptography & Auth
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Serialization & Validation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.19", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
